--- a/java/res/xml/prefs.xml
+++ b/java/res/xml/prefs.xml
@@ -182,6 +182,8 @@
             android:key="send_feedback"
             android:title="@string/send_feedback" />
         <PreferenceScreen
+            android:key="about_keyboard" />
+        <PreferenceScreen
             android:key="debug_settings"
             android:title="Debug settings"
             android:persistent="true"
