Use resources for dimensions of setup wizard
This is a ground work to fit the setup wizard to smaller phones and
larger tablets.

Bug: 8159728
Change-Id: Ie8e058bc3cba30cac3b31eb5a3ce975f2ee311d9

--- a/java/res/layout/setup_step.xml
+++ b/java/res/layout/setup_step.xml
@@ -25,14 +25,14 @@
     <TextView
         android:id="@+id/setup_step_title"
         style="@style/setupStepTitleStyle"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp" />
+        android:paddingTop="@dimen/setup_step_vertical_padding"
+        android:paddingBottom="@dimen/setup_step_vertical_padding" />
     <TextView
         android:id="@+id/setup_step_instruction"
         style="@style/setupStepInstructionStyle"
-        android:paddingBottom="16dp" />
+        android:paddingBottom="@dimen/setup_step_vertical_padding" />
     <TextView
         android:id="@+id/setup_step_action_label"
         style="@style/setupStepActionLabelStyle"
-        android:layout_marginTop="2dp" />
+        android:layout_marginTop="@dimen/setup_step_horizontal_line_height" />
 </LinearLayout>
