--- a/java/res/layout/setup_wizard.xml
+++ b/java/res/layout/setup_wizard.xml
@@ -24,8 +24,8 @@
     android:background="@color/setup_background"
     android:paddingLeft="@dimen/setup_horizontal_padding"
     android:paddingRight="@dimen/setup_horizontal_padding"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp">
+    android:paddingTop="@dimen/setup_vertical_padding"
+    android:paddingBottom="@dimen/setup_vertical_padding">
     <include
         android:id="@+id/setup_welcome_screen"
         layout="@layout/setup_welcome_screen" />
