--- a/java/res/values/setup-dimens.xml
+++ b/java/res/values/setup-dimens.xml
@@ -17,9 +17,21 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <dimen name="setup_title_text_size">46sp</dimen>
     <dimen name="setup_welcome_description_text_size">26sp</dimen>
+    <dimen name="setup_step_bullet_text_size">22sp</dimen>
+    <dimen name="setup_step_indicator_height">24dp</dimen>
+    <dimen name="setup_step_title_text_size">22sp</dimen>
+    <dimen name="setup_step_instruction_text_size">14sp</dimen>
+    <dimen name="setup_step_action_text_size">18sp</dimen>
+    <dimen name="setup_vertical_padding">16dp</dimen>
     <dimen name="setup_horizontal_padding">16dp</dimen>
+    <dimen name="setup_step_action_height">48dp</dimen>
+    <dimen name="setup_step_horizontal_padding">24dp</dimen>
+    <dimen name="setup_step_horizontal_padding_half">12dp</dimen>
+    <dimen name="setup_step_vertical_padding">16dp</dimen>
+    <dimen name="setup_step_horizontal_line_height">2dp</dimen>
     <integer name="setup_title_weight_in_screen">40</integer>
     <integer name="setup_body_weight_in_screen">60</integer>
+    <dimen name="setup_welcome_video_vertical_margin">24dp</dimen>
     <integer name="setup_welcome_video_weight_in_screen">80</integer>
     <integer name="setup_welcome_video_left_padding_weight_in_screen">10</integer>
     <integer name="setup_welcome_video_right_padding_weight_in_screen">10</integer>
