--- a/java/res/values/setup-styles-common.xml
+++ b/java/res/values/setup-styles-common.xml
@@ -24,9 +24,13 @@
     <style name="setupWelcomeDescritpionStyle" parent="setupTitleStyle">
         <item name="android:textSize">@dimen/setup_welcome_description_text_size</item>
     </style>
+    <style name="setupStepIndicatorStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/setup_step_indicator_height</item>
+    </style>
     <style name="setupStepBulletStyle">
         <item name="android:textColor">@color/setup_text_dark</item>
-        <item name="android:textSize">22sp</item>
+        <item name="android:textSize">@dimen/setup_step_bullet_text_size</item>
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_weight">1.0</item>
         <item name="android:layout_height">wrap_content</item>
@@ -37,32 +41,32 @@
         <item name="android:background">@color/setup_step_background</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:paddingLeft">24dp</item>
-        <item name="android:paddingRight">24dp</item>
+        <item name="android:paddingLeft">@dimen/setup_step_horizontal_padding</item>
+        <item name="android:paddingRight">@dimen/setup_step_horizontal_padding</item>
     </style>
     <style name="setupStepTitleStyle" parent="setupStepBaseStyle">
-        <item name="android:textSize">22sp</item>
+        <item name="android:textSize">@dimen/setup_step_title_text_size</item>
     </style>
     <style name="setupStepInstructionStyle" parent="setupStepBaseStyle">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">@dimen/setup_step_instruction_text_size</item>
     </style>
     <style name="setupStepStartIndicatorStyle">
         <item name="android:layout_width">24dp</item>
-        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_height">@dimen/setup_step_action_height</item>
     </style>
     <style name="setupStepActionLabelStyleCommon" parent="setupStepBaseStyle">
         <item name="android:textColor">@color/setup_step_action_color</item>
         <item name="android:background">@drawable/setup_step_action_background</item>
-        <item name="android:layout_height">48dp</item>
-        <item name="android:paddingLeft">12dp</item>
-        <item name="android:textSize">18sp</item>
-        <item name="android:drawablePadding">12dp</item>
+        <item name="android:layout_height">@dimen/setup_step_action_height</item>
+        <item name="android:paddingLeft">@dimen/setup_step_horizontal_padding_half</item>
+        <item name="android:textSize">@dimen/setup_step_action_text_size</item>
+        <item name="android:drawablePadding">@dimen/setup_step_horizontal_padding_half</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
     </style>
     <style name="setupStepStartActionLabelStyleCommon" parent="setupStepActionLabelStyleCommon">
-        <item name="android:paddingLeft">24dp</item>
-        <item name="android:paddingRight">24dp</item>
+        <item name="android:paddingLeft">@dimen/setup_step_horizontal_padding</item>
+        <item name="android:paddingRight">@dimen/setup_step_horizontal_padding</item>
     </style>
 </resources>
