[PB6] Encapsulate the buttons into a view
Handling buttons directly in the preference causes large
problems of code readability and interface.  It's better to
have a class to manage the buttons and their animations
separately. This is feature-equivalent, and mostly
delegates stuff for now.

Bug: 7600384
Change-Id: Ia8da0ec68ffac84fc1d65e1760539a87a73fa776

--- a/java/res/layout/dictionary_line.xml
+++ b/java/res/layout/dictionary_line.xml
@@ -71,14 +71,18 @@
 
   </LinearLayout>
 
-  <Button
-      android:id="@+android:id/wordlist_button"
+  <com.android.inputmethod.dictionarypack.ButtonSwitcher
+      android:id="@+android:id/wordlist_button_switcher"
       android:layout_weight="0"
       android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_gravity="right|center_vertical"
-      android:singleLine="true"
-      android:textAppearance="?android:attr/textAppearanceMedium"
-      android:text="@string/install_dict" />
-
+      android:layout_height="wrap_content">
+    <Button
+        android:id="@+android:id/dict_install_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|center_vertical"
+        android:singleLine="true"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/install_dict" />
+  </com.android.inputmethod.dictionarypack.ButtonSwitcher>
 </LinearLayout>
