Implement a functionality to add an entry to the user dictionary
Bug: 8600958

Change-Id: Ic472500406b9d54ec4052c490ee7cef62fc4e52a

--- a/java/res/values/dimens.xml
+++ b/java/res/values/dimens.xml
@@ -117,4 +117,6 @@
 
     <!-- Inset used in Accessibility mode to avoid accidental key presses when a finger slides off the screen. -->
     <dimen name="accessibility_edge_slop">8dp</dimen>
+
+    <integer name="user_dictionary_max_word_length" translatable="false">48</integer>
 </resources>
