--- a/java/res/layout/dictionary_line.xml
+++ b/java/res/layout/dictionary_line.xml
@@ -52,23 +52,27 @@
         android:ellipsize="marquee"
         android:fadingEdge="horizontal" />
 
-    <TextView
-        android:id="@+android:id/summary"
-        android:layout_marginLeft="5dip"
-        android:layout_marginStart="5dip"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textColor="?android:attr/textColorSecondary"
-        android:maxLines="1" />
+        android:layout_marginStart="5dip">
 
-    <!-- <ProgressBar -->
-    <!--     android:id="@+id/dictionary_line_progress_bar" -->
-    <!--     style="@android:style/Widget.Holo.ProgressBar.Horizontal" -->
-    <!--     android:layout_width="match_parent" -->
-    <!--     android:layout_height="match_parent" -->
-    <!--     android:gravity="center" /> -->
+      <TextView
+          android:id="@+android:id/summary"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:textAppearance="?android:attr/textAppearanceSmall"
+          android:textColor="?android:attr/textColorSecondary"
+          android:maxLines="1" />
 
+      <ProgressBar
+          android:id="@+id/dictionary_line_progress_bar"
+          style="@android:style/Widget.Holo.ProgressBar.Horizontal"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:gravity="center" />
+
+    </FrameLayout>
   </LinearLayout>
 
   <com.android.inputmethod.dictionarypack.ButtonSwitcher
