[PB11] Add a skeleton class for a self-updating progress bar
Bug: 7600384
Change-Id: I55b51152dd9968a359af091bf309f0d406f63ec4

--- a/java/res/layout/dictionary_line.xml
+++ b/java/res/layout/dictionary_line.xml
@@ -65,7 +65,7 @@
           android:textColor="?android:attr/textColorSecondary"
           android:maxLines="1" />
 
-      <ProgressBar
+      <com.android.inputmethod.dictionarypack.DictionaryDownloadProgressBar
           android:id="@+id/dictionary_line_progress_bar"
           style="@android:style/Widget.Holo.ProgressBar.Horizontal"
           android:layout_width="match_parent"
