Get rid of janky black box before the movie starts
Bug: 8159728
Change-Id: I1d0a01a05b3b694d21fdfdc246d1329ab829908d

--- a/java/res/layout/setup_welcome_video.xml
+++ b/java/res/layout/setup_welcome_video.xml
@@ -29,6 +29,7 @@
             android:layout_height="0dp" />
         <VideoView
             android:id="@+id/setup_welcome_video"
+            android:background="@color/setup_background"
             android:layout_weight="@integer/setup_welcome_video_weight_in_screen"
             android:layout_marginTop="@dimen/setup_welcome_video_vertical_margin"
             android:layout_marginBottom="@dimen/setup_welcome_video_vertical_margin"
