[PB14] Cosmetic fixes to the progress bar
Bug: 7600384
Change-Id: I33ea155c0c97c7ead07686c4d2a9e0d98be9929c

--- a/java/res/layout/dictionary_line.xml
+++ b/java/res/layout/dictionary_line.xml
@@ -78,6 +78,8 @@
   <com.android.inputmethod.dictionarypack.ButtonSwitcher
       android:id="@+android:id/wordlist_button_switcher"
       android:layout_weight="0"
+      android:layout_marginStart="13dip"
+      android:layout_marginLeft="13dip"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
     <Button
