Display still image when device can't play welcome video
Note that the still image in this change is a placeholder and must be
replaced by final asset.

Bug: 8159728
Change-Id: I4f5a28e0af711edacbc87c2ee64508f34f67f0da

--- a/java/res/layout/setup_welcome_video.xml
+++ b/java/res/layout/setup_welcome_video.xml
@@ -35,6 +35,12 @@
             android:layout_weight="@integer/setup_welcome_video_weight_in_screen"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
+        <ImageView
+            android:id="@+id/setup_welcome_image"
+            android:visibility="gone"
+            android:layout_weight="@integer/setup_welcome_video_weight_in_screen"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
         <View
             android:layout_weight="@integer/setup_welcome_video_right_padding_weight_in_screen"
             android:layout_width="0dp"
