--- a/java/res/layout/dictionary_line.xml
+++ b/java/res/layout/dictionary_line.xml
@@ -55,7 +55,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dip">
+        android:layout_marginStart="5dip"
+        android:layout_marginLeft="5dip">
 
       <TextView
           android:id="@+android:id/summary"
