Support multiple condition for getDeviceOverrideValue
Bug: 8556975
Change-Id: I29d3a305b6ac3d8e3620c6d8592d85047d62bf48

--- a/java/res/values/keyboard-heights.xml
+++ b/java/res/values/keyboard-heights.xml
@@ -34,6 +34,6 @@
         <!-- Xoom -->
         <item>HARDWARE=stingray,283.1337</item>
     <!-- Default value for unknown device: empty string -->
-        <item>DEFAULT,</item>
+        <item>,</item>
     </string-array>
 </resources>
